--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "homepage": "https://github.com/MatyiFKBT/docker-teszt#readme",
   "release": {
     "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
       ["@semantic-release/npm", {
         "npmPublish": false,
         "tarballDir": "dist"
+      }],
+      ["@semantic-release/github", {
+        "assets": "dist/*.tgz"
       }]
     ]
   }
