--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -45,6 +45,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: matyifkbt/docker-teszt/img
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           labels: |
