--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -5,6 +5,8 @@ on:
     #branches: [master]
     tags:
       - 'v*.*.*'
+  release:
+    types: [published]
 jobs:
   docker:
     runs-on: ubuntu-latest
