--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           DOCKER_IMAGE=matyifkbt/docker-teszt/img
           VERSION=noop
-          elif [[ $GITHUB_REF == refs/tags/* ]]; then
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
           elif [[ $GITHUB_REF == refs/heads/* ]]; then
             VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
