--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -44,13 +44,10 @@ jobs:
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           context: .
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: matyifkbt/docker-teszt/img
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           labels: |
