--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -15,6 +15,13 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
+        name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
