--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_PAT }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
