--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -14,11 +14,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Login to GitHub Packages Docker Registry
+     -
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_PAT }}
       -
