--- a/.github/workflows/osszetett.yml
+++ b/.github/workflows/osszetett.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           context: .
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          platforms: linux/amd64,linux/arm64,linux/arm
+          platforms: linux/arm
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           labels: |
