--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    if: "! contains(toJSON(github.event.commits.*.message), '[skip-ci]')"
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 12
