--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "boxen": "^4.2.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1"
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0"
   },
   "scripts": {
     "start": "node src/index.js",
@@ -40,7 +41,11 @@
         {
           "assets": "dist/*.tgz"
         }
-      ]
+      ],
+      ["@semantic-release/git", {
+        "assets": ["CHANGELOG.md", "package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }]
     ]
   }
 }
