--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         GIT_AUTHOR_NAME: ${{ github.repository_owner }}
+        GIT_AUTHOR_EMAIL: mmatyi1999@gmail.com
         GIT_COMMITTER_NAME: ${{ github.repository_owner }}
+        GIT_COMMITTER_EMAIL: mmatyi1999@gmail.com
