--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: 12
     - run: npm ci
     - run: npm run test --if-present
+    - run: echo ${{github}} 
     - run: npx semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
